--- a/tau/src/css/profile/mobile/changeable/common/jquery.mobile.tizen.popup.less
+++ b/tau/src/css/profile/mobile/changeable/common/jquery.mobile.tizen.popup.less
@@ -126,12 +126,8 @@
 				height: 74 * @unit_base;
 				display : inline-block;
 				margin: 0 auto;
-				.LESSpopup_button_style();
+				color: @color_popup_button_text;
 				box-sizing : border-box;
-			}
-
-			> .ui-btn.ui-btn-down-s {
-				.LESSpopup_button_press_style();
 			}
 
 			.ui-btn-inner {
