--- a/tau/src/css/profile/mobile/changeable/common/jquery.mobile.tizen.popupwindow.less
+++ b/tau/src/css/profile/mobile/changeable/common/jquery.mobile.tizen.popupwindow.less
@@ -526,13 +526,7 @@
 		}
 	}
 	.ui-btn{
-		.LESSpopup_button_style;
-	}
-	.ui-btn.ui-btn-hover-s{
-		.LESSpopup_button_hover_style;
-	}
-	.ui-btn.ui-btn-down-s{
-		.LESSpopup_button_press_style;
+		color: @color_popup_button_text;
 	}
 }
 .ui-popupwindow > .ui-volumecontrol {
