--- a/tau/src/css/profile/mobile/changeable/theme-changeable/theme.color.changeable.less
+++ b/tau/src/css/profile/mobile/changeable/theme-changeable/theme.color.changeable.less
@@ -193,11 +193,6 @@
 @color_searchbar_button_bg_press : B0215P;
 
 /***************************************************************************
-                   Popup
-***************************************************************************/
-@color_popup_bg: B061L1;
-
-/***************************************************************************
                         Button(connected with other winset)
 ***************************************************************************/
 @color_button_EditText:         T107;
@@ -280,19 +275,8 @@
 @color_popup_list_style_text: T125;
 @color_popup_list_style_text_press: T125P;
 @color_popup_button_bg:	B062;
-@color_popup_button_text:	T124;
+@color_popup_button_text: T052;
 @color_popup_dim_screen_bg: B015;
-
-.LESSpopup_button_style{
-	color: @color_popup_button_text;
-}
-
-.LESSpopup_button_hover_style{
-}
-
-.LESSpopup_button_press_style{
-	color: @color_popup_button_text;
-}
 
 /***************************************************************************
                     Tickernoti
